correção de comentário

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Linguaguem da página definida para Português do Brasil -->
+<!-- Linguagem da página definida para Português do Brasil -->
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
